--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -551,12 +551,23 @@ activity-tasks-review-proposal={0} reviewed proposal from {1}.
 activity-tasks-update-entry-for={0} updated a task for {1}.
 activity-tasks-update-entry={0} updated a task.
 activity-twitter-add-status={0} tweeted.
+activity-wiki-add-attachment-page={1} added an attachment to wiki page, {2}.
+activity-wiki-add-attachment-page-in={1} added an attachment to wiki page, {2}, in {0}.
 activity-wiki-add-comment-in={1} commented on a wiki page, {2}, in {0}.
 activity-wiki-add-comment={1} commented on a wiki page, {2}.
 activity-wiki-add-page-in={1} wrote a new wiki page, {2}, in {0}.
 activity-wiki-add-page={1} wrote a new wiki page, {2}.
+activity-wiki-add-the-attachment={1} added the attachment, 
+activity-wiki-remove-the-attachment={1} removed the attachment, 
+activity-wiki-remove-attachment-page={1} removed an attachment in wiki page, {2}
+activity-wiki-remove-attachment-page-in={1} removed an attachment in wiki page, {2}, in {0}.
 activity-wiki-update-page-in={1} updated a wiki page, {2}, in {0}.
 activity-wiki-update-page={1} updated a wiki page, {2}.
+activity-wiki-update-the-page-to-version={1} updated the page to version 
+activity-wiki-restore-attachment-page={1} restored an attachment to wiki page, {2}.
+activity-wiki-restore-attachment-page-in={1} restored an attachment to wiki page, {2}, in {0}.
+activity-wiki-restore-the-attachment={1} restored the attachment
+activity-wiki-add-the-page={1} added the page 
 activity=Activity
 actual-duration=Actual Duration
 actual-end-date=Actual End Date
@@ -1114,6 +1125,7 @@ attachment=Attachment
 attachments-recycle-bin=Attachments Recycle Bin
 attachments-that-have-been-removed-for-more-than-x-days-will-be-automatically-deleted=Attachments that have been removed for more than {0} days will be automatically deleted.
 attachments=Attachments
+attachments-history=Attachments History
 attending=Attending
 authenticate=Authenticate
 authentication-failed-please-enable-browser-cookies=Authentication failed. Please enable browser cookies and try again.
