--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -3647,6 +3647,7 @@
         /wiki/edit_page_discussion,\
         /wiki/get_page_attachment,\
         /wiki/rss,\
+        /wiki/view_page_attachments,\
         \
         /wiki_admin/edit_page_attachment,\
         \
