LPS-31950 Actions for attachments and wiki pages

--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -1744,6 +1744,7 @@ definition-of-terms=Definition of Terms
 definition-version=Definition Version
 definition=Definition
 definitions=Definitions
+delete-attachment=Delete attachment
 delete-category=Delete Category
 delete-content=Delete Content
 delete-data=Delete Data
@@ -4346,6 +4347,7 @@ remove-the-attachments-for-this-wiki-node=Remove the attachments for this wiki n
 remove-the-last-form-field=Remove the last form field.
 remove-translation=Remove Translation
 remove=Remove
+remove-attachment=Remove the attachment
 removed-attachments=Removed Attachments
 removed-by=Removed By
 removed-date=Removed Date
@@ -4432,6 +4434,8 @@ responses=Responses
 restart=restart
 restore-the-original-content=Restore the original content.
 restore=Restore
+restore-attachment=Restore the attachment
+restore-version=Restore version
 restrict-to=Restrict To
 restricted=Restricted
 resubmit=Resubmit
@@ -5654,6 +5658,7 @@ this-page-cannot-be-modified-because-it-is-associated-to-a-site-template-does-no
 this-page-displays-the-last-x-web-content,-structures,-and-templates-that-you-accessed=This page displays the last {0} web content, structures, and templates that you accessed.
 this-page-does-not-exist-yet-and-the-title-is-not-valid=This page does not exist yet and the title is not valid.
 this-page-does-not-exist-yet-use-the-form-below-to-create-it=This page does not exist yet. Use the form below to create it.
+this-page-does-not-have-activities=This page does not hace activities.
 this-page-does-not-have-file-attachments-in-the-recycle-bin=This page does not have file attachments in the Recycle Bin.
 this-page-does-not-have-file-attachments=This page does not have file attachments.
 this-page-has-already-been-started-by-another-author=This page has already been started by another author.
