--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -6018,6 +6018,7 @@ version-history=Version History
 version-name=Version Name
 version-x=Version {0}
 version=Version
+versions=Versions
 vertical-banner=Vertical Banner
 vertical-bar=Vertical Bar
 vertical=Vertical
