--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -559,6 +559,12 @@ activity-wiki-add-page-in={1} wrote a new wiki page, {2}, in {0}.
 activity-wiki-add-page={1} wrote a new wiki page, {2}.
 activity-wiki-update-page-in={1} updated a wiki page, {2}, in {0}.
 activity-wiki-update-page={1} updated a wiki page, {2}.
+activity-wiki-add-attachment-page={1} added an attachment to wiki page, {2}.
+activity-wiki-add-attachment-page-in={1} added an attachment to wiki page, {2}, in {0}.
+activity-wiki-remove-attachment-page={1} removed an attachment in wiki page, {2}
+activity-wiki-remove-attachment-page-in={1} removed an attachment in wiki page, {2}, in {0}.
+activity-wiki-restore-attachment-page={1} restored an attachment to wiki page, {2}.
+activity-wiki-restore-attachment-page-in={1} restored an attachment to wiki page, {2}, in {0}.
 activity=Activity
 actual-duration=Actual Duration
 actual-end-date=Actual End Date
@@ -1457,6 +1463,7 @@ company-profile=Company Profile
 company=Company
 compare-versions=Compare Versions
 compare=Compare
+compare-to=Compare to...
 comparing-versions-x-and-x=Comparing Versions {0} and {1}
 completed-in-x-seconds=Completed in {0} seconds.
 completed=Completed
@@ -4424,6 +4431,7 @@ responses=Responses
 restart=restart
 restore-the-original-content=Restore the original content.
 restore=Restore
+restore-version=Restore version
 restrict-to=Restrict To
 restricted=Restricted
 resubmit=Resubmit
@@ -4661,6 +4669,7 @@ select-this-to-copy-the-pages-of-the-site-template-x-as-public-pages-for-this-si
 select-user=Select User
 select-users-to-associate-with-the-action-x=Select users to associate with the action {0}.
 select-users-to-associate-with-the-following-actions-x=Select users to associate with the following actions: {0}
+select-version=Select version
 select-web-content=Select Web Content
 select-x=Select {0}
 select=Select
