--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -417,6 +417,8 @@ action.VIEW_USER=View User
 ## Messages
 ##
 
+remove-attachment=Remove Attachment
+delete-attachment=Delete Attachment
 1-day=1 Day
 1-minute=1 Minute
 1-month=1 Month
