--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -561,10 +561,15 @@ activity-wiki-update-page-in={1} updated a wiki page, {2}, in {0}.
 activity-wiki-update-page={1} updated a wiki page, {2}.
 activity-wiki-add-attachment-page={1} added an attachment to wiki page, {2}.
 activity-wiki-add-attachment-page-in={1} added an attachment to wiki page, {2}, in {0}.
+activity-wiki-add-the-attachment={0} added the attachment {1}
+activity-wiki-delete-the-attachment={0} removed the attachment {1}
 activity-wiki-remove-attachment-page={1} removed an attachment in wiki page, {2}
 activity-wiki-remove-attachment-page-in={1} removed an attachment in wiki page, {2}, in {0}.
+activity-wiki-update-the-page-to-version={0} updated the page to version {1}
 activity-wiki-restore-attachment-page={1} restored an attachment to wiki page, {2}.
 activity-wiki-restore-attachment-page-in={1} restored an attachment to wiki page, {2}, in {0}.
+activity-wiki-restore-the-attachment={0} restored the attachment {1}
+activity-wiki-add-the-page={0} added the page {1}
 activity=Activity
 actual-duration=Actual Duration
 actual-end-date=Actual End Date
