LPS-31950 changes explained in pull #8961

--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -4438,7 +4438,7 @@ responses=Responses
 restart=restart
 restore-the-original-content=Restore the original content.
 restore=Restore
-restore-version=Restore version
+restore-version=Restore Version
 restrict-to=Restrict To
 restricted=Restricted
 resubmit=Resubmit
@@ -4676,7 +4676,7 @@ select-this-to-copy-the-pages-of-the-site-template-x-as-public-pages-for-this-si
 select-user=Select User
 select-users-to-associate-with-the-action-x=Select users to associate with the action {0}.
 select-users-to-associate-with-the-following-actions-x=Select users to associate with the following actions: {0}
-select-version=Select version
+select-version=Select Version
 select-web-content=Select Web Content
 select-x=Select {0}
 select=Select
